# jobboard_app

./: .env.template  .flake8  .pre-commit-config.yaml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
src/jobboard_app/core/: apps.py  dto.py  exceptions.py  forms.py  middleware.py  models.py  services.py  urls.py  validators.py  views.py
src/jobboard_app/core/business_logic/: exceptions.py  interfaces.py
src/jobboard_app/core/business_logic/dto/: __init__.py  company.py  login.py  registration.py  vacancy.py
src/jobboard_app/core/business_logic/services/: __init__.py  common.py  company.py  login.py  registration.py  vacancy.py
src/jobboard_app/core/management/commands/: populate_permissions.py
src/jobboard_app/core/migrations/: 0001_initial.py  0002_alter_company_table_alter_vacancy_table.py  0003_level_tag_vacancy_tags_alter_vacancy_level.py  0004_populate_levels_table_with_defaults.py  0005_vacancy_name.py  0006_alter_level_name_alter_tag_name.py  0007_vacancy_attachment.py  0008_company_logo.py  0009_create_default_roles.py  0010_emailconfirmationcodes.py  0011_alter_vacancy_options.py  0012_add_apply_to_vacancy_permission_for_candidate.py  0013_jobresponse.py  0014_vacancy_qr_code.py
src/jobboard_app/core/models/: __init__.py  company.py  email_confiramtion_code.py  job_response.py  level.py  tag.py  vacancy.py
src/jobboard_app/core/presentation/: pagination.py  urls.py
src/jobboard_app/core/presentation/api_v1/: pagination.py  urls.py  validators.py
src/jobboard_app/core/presentation/common/: validators.py
src/jobboard_app/core/presentation/forms/: __init__.py  company.py  login.py  registration.py  vacancy.py
src/jobboard_app/core/presentation/templates/: add_company.html  add_vacancy.html  base.html  company_list.html  get_company.html  get_vacancy.html  signin.html  signup.html
src/jobboard_app/core/presentation/views/: __init__.py  company.py  login.py  logout.py  registration.py  vacancy.py
src/jobboard_app/core/presentation/web/: urls.py  validators.py
src/jobboard_app/core/tests/mocks/: __init__.py
src/jobboard_app/core/tests/test_unit/: test_validators.py
src/jobboard_app/core/tests_pytest/: conftest.py  utils.py
src/jobboard_app/jobboard_app/: logger_formatter.py  settings.py  template_renders.py  urls.py
src/jobboard_app/templates/: add_company.html  add_vacancy.html  base.html  company_list.html  form_snippet.html  get_company.html  get_vacancy.html  index.html  search_form_snippet.html
(+29 files in other folders)
