[tool.poetry]
name = "jobboard-app"
version = "0.1.0"
description = ""
authors = ["Maksim Perkovskiy <m.perkovskiy@godeltech.com>"]
readme = "README.md"
packages = [{include = "jobboard_app"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
