[tool.poetry]
name = "jobboard-app"
version = "0.1.0"
description = ""
authors = ["Maksim Perkovskiy <m.perkovskiy@godeltech.com>"]
readme = "README.md"
packages = [{include = "jobboard_app"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.2"
python-dotenv = "1.0.0"
psycopg2-binary = "2.9.6"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
deptry = "0.11.0"
pylint = "2.17.4"

[tool.mypy]
mypy_path = "src/jobboard_app"
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true
no_implicit_optional = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true

[tool.black]
target-version = ["py310"]
line-length = 120
include_trailing_comma = true

[tool.isort]
profile = "black"
line_length = 120
include_trailing_comma = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
