[tool.poetry]
name = "jobboard-app"
version = "0.1.0"
description = ""
authors = ["Maksim Perkovskiy <m.perkovskiy@godeltech.com>"]
readme = "README.md"
packages = [{include = "jobboard_app"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.3"
python-dotenv = "1.0.0"
psycopg2-binary = "2.9.6"
dacite = "1.8.1"
pillow = "10.0.0"
redis = "5.0.0"
hiredis = "2.2.3"
djangorestframework = "3.14.0"
markdown = "3.4.4"
django-filter = "23.2"
drf-yasg = "^1.21.7"
typing-extensions = "4.8.0"
requests = "^2.31.0"
types-requests = "^2.31.0.8"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
deptry = "0.11.0"
pylint = "2.17.4"

[tool.mypy]
mypy_path = "src/jobboard_app"
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true
no_implicit_optional = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true

[tool.black]
target-version = ["py310"]
line-length = 120
include_trailing_comma = true

[tool.isort]
profile = "black"
line_length = 120
include_trailing_comma = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
